# minervapy

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/minervapy/: __init__.py  configuration.py  conversion.py  files.py  map.py  model.py  project.py  session.py  utils.py
tests/: .all.py.swp  all.py  input_celldesigner_map.xml  output_celldesigner_map.xml  output_source.xml
